[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Enemies/Ghost/Idle (44x30).png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Ghost/Desappear (44x30).png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Ghost/Appear (44x30).png" type="Texture" id=3]
[ext_resource path="res://Hitbox and Hurtbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Ghost.gd" type="Script" id=6]
[ext_resource path="res://Hitbox and Hurtbox/Hurtbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 132, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 264, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 308, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 352, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 396, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 44, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 88, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 88, 0, 44, 30 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 132, 0, 44, 30 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "Appear",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "Disappear",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 12.0
height = 0.0

[sub_resource type="CircleShape2D" id=21]
radius = 230.02

[sub_resource type="CircleShape2D" id=22]
radius = 12.0

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
frames = SubResource( 19 )
animation = "Idle"
playing = true
flip_h = true

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 20 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 21 )

[node name="Hurtbox" parent="." instance=ExtResource( 7 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, -13 )
shape = SubResource( 22 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
